# logic_foundry

./: LICENSE  README.md  nothing.cabal  nothing.cabal.save0  nothing.cabal.save1
app/: Main.hs
src/: IndexTracker.hs  Kernel.hs  StdPattern.hs  StdPatternDevel.hs
src/Internal/: StdPattern.hs
src/Langs/: BasicUntyped.hs
src/Langs/Internal/BasicUntyped/: Axiomizations.hs  Core.hs  Rendering.hs  Shorthands.hs
src/RuleSets/: BaseLogic.hs  BaseLogicDevel.hs  PredLogic.hs  PredLogicDevel.hs  PredLogicUntyped.hs  PropLogic.hs  PropLogicDevel.hs  RemarkLogic.hs  RemarkLogicDevel.hs  ZFC.hs
src/RuleSets/BaseLogic/: Core.hs  Helpers.hs
src/RuleSets/Internal/: BaseLogic.hs  PredLogic.hs  PropLogic.hs  RemarkLogic.hs  ZFC.hs
src/RuleSets/PredLogic/: Core.hs  Helpers.hs
src/RuleSets/PropLogic/: Core.hs  Helpers.hs
src/RuleSets/ZFC/: Core.hs  Helpers.hs  Theorems.hs
